deploy/base/ingress-www-redirect.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nousresearch-www-redirect
  labels:
    dokploy-fleet/project: nousresearch
  annotations:
    acme.cert-manager.io/http01-edit-in-place: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    cert-manager.io/issue-temporary-certificate: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/permanent-redirect: https://nousresearch.lol
    nginx.ingress.kubernetes.io/permanent-redirect-code: "308"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - www.nousresearch.lol
      secretName: nousresearch-www-redirect-tls
  rules:
    - host: www.nousresearch.lol
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nousresearch
                port:
                  number: 80
